--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,10 +72,15 @@ cmake_dependent_option (IUP_CD "Build Canvas Draw library" ON "IUP_TOOLKIT" OFF)
 cmake_dependent_option (IUP_VLED "Build VLED editor" ON "IUP_CD" OFF)
 
 if (IUP_CD)
-    add_subdirectory ("thirdparty/zlib-1.2.11")
+    if (NOT TARGET zlibstatic)
+        add_subdirectory ("thirdparty/zlib-1.2.11")
+    endif ()
     add_subdirectory ("thirdparty/freetype-2.10.2")
     add_subdirectory ("thirdparty/ftgl-2.1.5")
     add_subdirectory ("thirdparty/cd-5.14")
+endif ()
+if (IUP_IM)
+    add_subdirectory ("thirdparty/im-3.15")
 endif ()
 
 if (IUP_TOOLKIT)
@@ -91,7 +96,7 @@ if (IUP_CD)
     add_subdirectory ("srccd")
 endif ()
 if (IUP_VLED)
-    add_subdirectory ("srcvled")
+    #    add_subdirectory ("srcvled")
 endif ()
 
 if (IUP_TOOLKIT AND IUP_IMGLIB)
