--- a/srcvled/CMakeLists.txt
+++ b/srcvled/CMakeLists.txt
@@ -7,6 +7,15 @@ add_executable (iupvled
     "iup_vled_imgs.c")
 target_link_libraries (iupvled PRIVATE
     iup
-    iupim
     iupimglib
     iupcd)
+
+if (IUP_IM)
+    target_link_libraries (iupvled PRIVATE
+        iupim
+        im
+        cd)
+    target_compile_definitions (iupvled PRIVATE
+        USE_IM)
+endif ()
+
