--- a/srcimglib/CMakeLists.txt
+++ b/srcimglib/CMakeLists.txt
@@ -2,11 +2,12 @@ project (iupimglib
     LANGUAGES C
     VERSION ${IUP_VERSION})
 
-add_library (iupimglib
+add_library (iupimglib ${IUP_LIB_TYPE}
     "iup_image_library.c"
     "iup_imglib_circleprogress.c")
 target_include_directories (iupimglib
     PRIVATE
+        $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/../src>
         $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}>)
 target_compile_definitions (iupimglib
     PRIVATE
@@ -18,6 +19,23 @@ target_compile_definitions (iupimglib
 target_link_libraries (iupimglib
     PRIVATE
         iup)
+set_target_properties (iupimglib
+    PROPERTIES
+        DEBUG_POSTFIX "d"
+        MSVC_RUNTIME_LIBRARY MultiThreaded$<$<CONFIG:Debug>:Debug>
+        RUNTIME_OUTPUT_DIRECTORY ${IUP_BUILD_BINDIR}
+        RUNTIME_OUTPUT_DIRECTORY_DEBUG ${IUP_BUILD_BINDIR}
+        RUNTIME_OUTPUT_DIRECTORY_RELEASE ${IUP_BUILD_BINDIR}
+        LIBRARY_OUTPUT_DIRECTORY ${IUP_BUILD_LIBDIR}
+        LIBRARY_OUTPUT_DIRECTORY_DEBUG ${IUP_BUILD_LIBDIR}
+        LIBRARY_OUTPUT_DIRECTORY_RELEASE ${IUP_BUILD_LIBDIR}
+        ARCHIVE_OUTPUT_DIRECTORY ${IUP_BUILD_LIBDIR}
+        ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${IUP_BUILD_LIBDIR}
+        ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${IUP_BUILD_LIBDIR})
+
+if (CMAKE_SYSTEM_NAME MATCHES "Windows" AND IUP_LIB_TYPE MATCHES "SHARED")
+    target_sources (iupimglib PRIVATE "iupimglib.def")
+endif ()
 
 if (IUP_TOOLKIT MATCHES "Motif")
     target_sources (iupimglib PRIVATE
@@ -52,3 +70,13 @@ else ()
         "iup_imglib_logos48x48_8bpp.c"
         "iup_imglib_logos32x32_8bpp.c")
 endif ()
+
+add_library (IUP::imglib ALIAS iupimglib)
+
+install (
+    TARGETS iupimglib
+    EXPORT IUPTargets
+    INCLUDES DESTINATION ${IUP_INSTALL_INCLUDEDIR}
+    ARCHIVE DESTINATION ${IUP_INSTALL_LIBDIR}
+    LIBRARY DESTINATION ${IUP_INSTALL_LIBDIR}
+    RUNTIME DESTINATION ${IUP_INSTALL_BINDIR})
